# sopaste

./: .dockerignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: main.yml
src/: config.rs  main.rs  menu.rs  models.rs  result.rs  state.rs  static.rs  storage.rs  syntax.rs  templates.rs  tree.rs
src/entities/: list.rs  mod.rs  text.rs
static/: robots.txt  style.css
templates/: about.html  base.html  error.html  index.html  paste.html  tree.html
templates/menu/: main.html  paste.html
templates/tree/: node.html  root.html
