[package]
name = "sopaste"
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]
repository = "https://github.com/JockeTF/sopaste"
readme = "readme.md"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies.askama]
version = "0.12"

[dependencies.axum]
version = "0.6.10"
features = ["headers", "macros"]

[dependencies.const_format]
version = "0.2.30"

[dependencies.crc]
version = "3.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.syntect]
version = "5.0"

[dependencies.sqlx]
version = "0.7"
features = ["chrono", "mysql", "runtime-tokio"]

[dependencies.tokio]
version = "1.29"
features = ["macros", "rt-multi-thread"]
